<resources>
    <string name="app_name">KursASIandek</string>
    <string name="label1">Hello world!</string>
    <string name="str2">cosdvgdfsvś</string>
    <string name="clickme">clickMe!</string>
    <string name="new_activity">new activity</string>
    <string name="to_jest_nowy_activity">to jest nowy activity</string>
    <string name="fragment_hello">to jest fragment</string>
    <string name="fragment_1">fragment 1</string>
    <string name="fragment_2">fragment 2</string>
    <string name="message_place_holder">message place holder</string>
    <string name="title_place_holder">Title place holder</string>
    <string name="dialog_place_holder">dialog place holder</string>
    <string name="dialog_content_place_holder">dvdhdfhsdfjsdfhcsdhijcvhsdj</string>
    <string name="pref_file">pref</string>
    <string name="save_key1">key1</string>
</resources>
