<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_hello"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textAlignment="center"
            android:text="@string/label1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str2"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:text="@string/clickme"
                android:labelFor="@+id/editBox"/>

            <EditText
                android:id="@+id/editBox"
                android:layout_width="200dp"
                android:inputType="text"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@mipmap/ic_launcher"
                android:contentDescription="@string/label1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginStart="50dp"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:text="@string/label1"/>

        </FrameLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/andek1"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clickme"/>

            <ImageView
                android:id="@+id/andek2"
                android:layout_alignEnd="@id/andek1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="350dp"
                android:src="@mipmap/ic_launcher"
                android:contentDescription="@string/clickme"/>

            <Button
                android:id="@+id/new_activity_button"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/new_activity"/>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>